temporary detail page

--- a/www/templates/tab-all.html
+++ b/www/templates/tab-all.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Meals">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="meal in meals" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="meal in meals" type="item-text-wrap" href="#/tab/all/1">
                 <img ng-src="{{chat.face}}">
                 <h2>{{meal.name}}</h2>
                 <p>{{meal.description}}</p>
