use api token, avoid push

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -5,6 +5,10 @@
                 <span class="input-label">Api Url</span>
                 <input type="text" ng-model="$storage.api_base">
             </label>
+            <label class="item item-input">
+                <span class="input-label">Api Token</span>
+                <input type="text" ng-model="$storage.api_token">
+            </label>
         </div>
     </ion-content>
 </ion-view>
